message delete via socket synchronization: unstable

--- a/client/ChatClient/Core/ChatClient.Core.UI/PopupPages/pgEditMessage.xaml
+++ b/client/ChatClient/Core/ChatClient.Core.UI/PopupPages/pgEditMessage.xaml
@@ -4,7 +4,7 @@
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
              x:Class="ChatClient.Core.UI.PopupPages.pgEditMessage"
 			xmlns:i18n="clr-namespace:ChatClient.Core.Common;assembly=ChatClient.Core.Common" >
-  <ScrollView  >
+  <ScrollView  HorizontalOptions="Fill" VerticalOptions="Fill"  >
     <StackLayout Margin="15,30,15,30" Padding="15,30,15,30" BackgroundColor="White" VerticalOptions="CenterAndExpand">
       <!--<Grid Margin="15,30,15,30" BackgroundColor="White">
    <Grid.RowDefinitions>
