--- a/client/ChatClient.UWP/MainPage.xaml
+++ b/client/ChatClient.UWP/MainPage.xaml
@@ -1,5 +1,6 @@
-﻿<Page
+﻿<forms:WindowsPage
     x:Class="ChatClient.UWP.MainPage"
+    xmlns:forms="using:Xamarin.Forms.Platform.UWP"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ChatClient.UWP"
@@ -7,7 +8,4 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-    </Grid>
-</Page>
+</forms:WindowsPage>
