--- a/client/ChatClient/Core/ChatClient.Core.UI/CustomCells/IncomingViewCell.xaml
+++ b/client/ChatClient/Core/ChatClient.Core.UI/CustomCells/IncomingViewCell.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ChatClient.Core.UI.IncomingViewCell"
              xmlns:plugin="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
-             xmlns:local="clr-namespace:ChatClient.Core.UI;assembly=ChatClient.Core.UI">
+             xmlns:local="clr-namespace:ChatClient.Core.UI;assembly=ChatClient.Core.UI"
+          Appearing="ViewCell_Appearing"
+          Disappearing="ViewCell_Disappearing">
 <Grid ColumnSpacing="2" Padding="5">
  <Grid.ColumnDefinitions>
    <ColumnDefinition Width="40"></ColumnDefinition>
@@ -26,7 +28,7 @@
                     HorizontalOptions="Center"
                     VerticalOptions="Center" Source="{Binding Photo}"></plugin:CircleImage>
 <Frame Grid.Row="0" OutlineColor="Transparent" HasShadow="False" Grid.Column="1" BackgroundColor="#03A9F4">
-            <Label TextColor="White" Text="{Binding Message}" />
+            <Label x:Name="Message_Label" TextColor="White" Text="{Binding Message}" />
 </Frame>
         <Label FontSize="Micro" Grid.Row="1" Grid.Column="1" Text="{Binding Timestamp, StringFormat='{0:MM/dd/yyyy hh:mm tt}'}" TextColor="Gray"></Label>  
 </Grid>
