--- a/client/ChatClient/Core/ChatClient.Core.UI/CustomCells/OutgoingViewCell.xaml
+++ b/client/ChatClient/Core/ChatClient.Core.UI/CustomCells/OutgoingViewCell.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ViewCell xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:plugin="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
@@ -28,9 +28,10 @@
                       HorizontalOptions="Center"
                       VerticalOptions="Center" Source="{Binding Photo}"></plugin:CircleImage>
     <Frame Grid.Row="0" OutlineColor="Transparent" HasShadow="False" Grid.Column="1" BackgroundColor="#F5F5F5">
-      <Label x:Name="Message_Label" BackgroundColor="Aqua" TextColor="Black" HorizontalTextAlignment="End" HorizontalOptions="FillAndExpand" Text="{Binding Message}" />
+      <Label x:Name="Message_Label" TextColor="Black" HorizontalTextAlignment="End" HorizontalOptions="FillAndExpand" Text="{Binding Message}" />
     </Frame>
         <Label Grid.Row="1" FontSize="Micro" Grid.Column="1" HorizontalTextAlignment="End"  Text="{Binding Timestamp, StringFormat='{0:MM/dd/yyyy hh:mm tt}'}" TextColor="Gray"></Label>
-    
+        <Label x:Name="Label_Status" Grid.Row="1" Grid.Column="2" MinimumWidthRequest="10" TextColor="Gray"></Label>
+
   </Grid>
 </ViewCell>
